--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
       background: linear-gradient(135deg, #0d0e1a, #1a1c2d);
       overflow: hidden;
       transition: background 1s ease;
-      perspective: 1200px; /* Agregamos perspectiva global */
+      perspective: 1000px; /* Compatibilidad 3D */
     }
     body.dark { background: #000; }
     .main { height: 100dvh; display: flex; flex-direction: column; opacity: 0; animation: fadeIn 1.6s ease forwards; }
@@ -79,8 +79,10 @@
       display: flex;
       justify-content: center;
       align-items: center;
-      animation: flotar 8s ease-in-out infinite alternate;
+      animation: flotar 6s ease-in-out infinite alternate;
       transform-style: preserve-3d;
+      perspective: 1000px;
+      backface-visibility: hidden;
     }
 
     .portada-wrapper img {
@@ -90,23 +92,23 @@
       aspect-ratio: 2/3;
       border-radius: 22px;
       box-shadow: 0 12px 40px rgba(0, 0, 0, 0.4);
-      transition: transform 1s ease;
-      animation: giro3d 10s infinite alternate ease-in-out;
-      transform-origin: center;
       transform-style: preserve-3d;
+      backface-visibility: hidden;
+      transform-origin: center;
+      animation: giro3d 8s infinite alternate ease-in-out;
     }
 
-    /* Animación de flotar */
+    /* Flotar suave */
     @keyframes flotar {
       0%, 100% { transform: translateY(0); }
-      50% { transform: translateY(-10px); }
+      50% { transform: translateY(-8px); }
     }
 
-    /* Animación de giro 3D */
+    /* Giro 3D suave */
     @keyframes giro3d {
       0% { transform: rotateY(0deg) rotateX(0deg); }
-      50% { transform: rotateY(8deg) rotateX(2deg); }
-      100% { transform: rotateY(-8deg) rotateX(-2deg); }
+      50% { transform: rotateY(6deg) rotateX(1deg); }
+      100% { transform: rotateY(-6deg) rotateX(-1deg); }
     }
 
     .footer {
@@ -164,8 +166,8 @@
   </div>
 </div>
 
-<!-- Aquí iría tu script de interacción que ya tienes funcionando -->
-<!-- Sólo recuerda que ahora la portada incluye animaciones 3D automáticamente -->
+<!-- Aquí iría tu script actual de generación de bloques -->
+<!-- La portada ahora gira 3D automáticamente con compatibilidad asegurada -->
 
 </body>
 </html>
