--- a/public/index.html
+++ b/public/index.html
@@ -72,14 +72,14 @@
     }
     @keyframes aparecer { from { opacity: 0; transform: scale(0.95); } to { opacity: 1; transform: scale(1); } }
 
-    /* Nueva animación portada */
+    /* Nueva animación portada: LATIDO + RESPLANDOR */
     .portada-wrapper {
       width: 100%;
       height: 100%;
       display: flex;
       justify-content: center;
       align-items: center;
-      animation: flotarPortada 10s ease-in-out infinite;
+      animation: latidoPortada 6s ease-in-out infinite;
       background: transparent;
     }
     .portada-wrapper img {
@@ -90,16 +90,20 @@
       border-radius: 22px;
       box-shadow: 0 12px 40px rgba(0, 0, 0, 0.4);
       transition: transform 0.4s ease, box-shadow 0.4s ease;
+      animation: resplandorLatido 6s ease-in-out infinite;
     }
     .portada-wrapper img:hover {
-      transform: scale(1.02);
+      transform: scale(1.04);
     }
-    @keyframes flotarPortada {
-      0% { transform: translateY(0px) rotate(0deg) scale(1); }
-      25% { transform: translateY(-6px) rotate(-1deg) scale(1.02); }
-      50% { transform: translateY(0px) rotate(0deg) scale(1); }
-      75% { transform: translateY(-6px) rotate(1deg) scale(1.02); }
-      100% { transform: translateY(0px) rotate(0deg) scale(1); }
+
+    @keyframes latidoPortada {
+      0%, 100% { transform: scale(1); }
+      50% { transform: scale(1.03); }
+    }
+
+    @keyframes resplandorLatido {
+      0%, 100% { box-shadow: 0 12px 40px rgba(0, 0, 0, 0.4); }
+      50% { box-shadow: 0 16px 50px rgba(255, 255, 255, 0.25); }
     }
 
     .footer {
