--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
       background: linear-gradient(135deg, #0d0e1a, #1a1c2d);
       overflow: hidden;
       transition: background 1s ease;
-      perspective: 1200px; /* importante para 3D real */
+      perspective: 1200px;
     }
     body.dark { background: #000; }
     .main { height: 100dvh; display: flex; flex-direction: column; opacity: 0; animation: fadeIn 1.6s ease forwards; }
@@ -73,46 +73,59 @@
     }
     @keyframes aparecer { from { opacity: 0; transform: scale(0.95); } to { opacity: 1; transform: scale(1); } }
 
-    /* Portada Animación Avanzada */
+    /* Libro con volumen real */
     .portada-wrapper {
       width: 100%;
       height: 100%;
       display: flex;
       justify-content: center;
       align-items: center;
-      transform-style: preserve-3d;
-      animation: flotarTiltRespirar 7s ease-in-out infinite;
+      perspective: 1200px;
+      animation: flotarTilt 8s ease-in-out infinite;
       background: transparent;
+      transform-style: preserve-3d;
     }
-    .portada-wrapper img {
-      width: 88%;
-      max-height: 92%;
-      object-fit: cover;
+    .libro {
+      width: 80%;
+      height: auto;
       aspect-ratio: 2/3;
-      border-radius: 22px;
-      box-shadow: 0 12px 30px rgba(0, 0, 0, 0.4);
-      transition: transform 0.6s ease;
+      transform-style: preserve-3d;
+      transform: rotateY(0deg) scale(1);
+      animation: respirarLibro 6s ease-in-out infinite;
+      position: relative;
     }
-    .portada-wrapper img:hover {
-      transform: scale(1.08) translateZ(60px);
+    .libro .cara {
+      position: absolute;
+      width: 100%;
+      height: 100%;
+      background-size: cover;
+      background-position: center;
+      border-radius: 16px;
+      box-shadow: 0 12px 30px rgba(0,0,0,0.4);
+      backface-visibility: hidden;
+    }
+    .libro .lomo {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 8%;
+      height: 100%;
+      background: #d3d3d3;
+      transform: rotateY(90deg);
+      transform-origin: left;
+      border-radius: 2px;
     }
 
-    @keyframes flotarTiltRespirar {
-      0% {
-        transform: translateY(0px) rotateX(0deg) rotateY(0deg) scale(1);
-      }
-      25% {
-        transform: translateY(-8px) rotateX(3deg) rotateY(-3deg) scale(1.02);
-      }
-      50% {
-        transform: translateY(0px) rotateX(0deg) rotateY(0deg) scale(1);
-      }
-      75% {
-        transform: translateY(-8px) rotateX(-3deg) rotateY(3deg) scale(1.02);
-      }
-      100% {
-        transform: translateY(0px) rotateX(0deg) rotateY(0deg) scale(1);
-      }
+    @keyframes flotarTilt {
+      0% { transform: translateY(0px) rotateX(0deg) rotateY(0deg); }
+      25% { transform: translateY(-6px) rotateX(2deg) rotateY(-3deg); }
+      50% { transform: translateY(0px) rotateX(0deg) rotateY(0deg); }
+      75% { transform: translateY(-6px) rotateX(-2deg) rotateY(3deg); }
+      100% { transform: translateY(0px) rotateX(0deg) rotateY(0deg); }
+    }
+    @keyframes respirarLibro {
+      0%, 100% { transform: rotateY(0deg) scale(1); }
+      50% { transform: rotateY(0deg) scale(1.02); }
     }
 
     .footer {
@@ -172,7 +185,6 @@
 </div>
 
 <script>
-/* JavaScript de TrigguiApp */
 const el = id => document.getElementById(id);
 
 const nombresBloques = [
@@ -293,11 +305,19 @@ function revelarTodo() {
       const wrapper = document.createElement("div");
       wrapper.className = "portada-wrapper";
 
-      const img = document.createElement("img");
-      img.src = libroActual.portada;
-      img.alt = "Portada del libro";
+      const libro = document.createElement("div");
+      libro.className = "libro";
 
-      wrapper.appendChild(img);
+      const cara = document.createElement("div");
+      cara.className = "cara";
+      cara.style.backgroundImage = `url(${libroActual.portada})`;
+
+      const lomo = document.createElement("div");
+      lomo.className = "lomo";
+
+      libro.appendChild(cara);
+      libro.appendChild(lomo);
+      wrapper.appendChild(libro);
       block.appendChild(wrapper);
     } else {
       if (text) text.classList.remove("hidden");
