--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,7 @@
       perspective: 1200px;
     }
     body.dark { background: #000; }
-    .main { height: 100dvh; display: flex; flex-direction: column; opacity: 0; animation: fadeIn 1.6s ease forwards; }
+    .main { height: 100dvh; display: flex; flex-direction: column; opacity: 0; animation: fadeIn 1.5s ease forwards; }
     @keyframes fadeIn { from { opacity: 0; transform: translateY(20px); } to { opacity: 1; transform: translateY(0); } }
     .grid {
       flex: 1;
@@ -73,59 +73,46 @@
     }
     @keyframes aparecer { from { opacity: 0; transform: scale(0.95); } to { opacity: 1; transform: scale(1); } }
 
-    /* Libro con volumen real */
+    /* Portada perfecta */
     .portada-wrapper {
       width: 100%;
       height: 100%;
       display: flex;
       justify-content: center;
       align-items: center;
-      perspective: 1200px;
-      animation: flotarTilt 8s ease-in-out infinite;
+      animation: flotarRespirarTilt 8s ease-in-out infinite;
+      transform-style: preserve-3d;
       background: transparent;
-      transform-style: preserve-3d;
     }
-    .libro {
-      width: 80%;
-      height: auto;
+    .portada-wrapper img {
+      width: 88%;
+      max-height: 92%;
+      object-fit: cover;
       aspect-ratio: 2/3;
-      transform-style: preserve-3d;
-      transform: rotateY(0deg) scale(1);
-      animation: respirarLibro 6s ease-in-out infinite;
-      position: relative;
+      border-radius: 22px;
+      box-shadow: 0 12px 30px rgba(0, 0, 0, 0.4);
+      transition: transform 0.6s ease;
     }
-    .libro .cara {
-      position: absolute;
-      width: 100%;
-      height: 100%;
-      background-size: cover;
-      background-position: center;
-      border-radius: 16px;
-      box-shadow: 0 12px 30px rgba(0,0,0,0.4);
-      backface-visibility: hidden;
-    }
-    .libro .lomo {
-      position: absolute;
-      top: 0;
-      left: 0;
-      width: 8%;
-      height: 100%;
-      background: #d3d3d3;
-      transform: rotateY(90deg);
-      transform-origin: left;
-      border-radius: 2px;
+    .portada-wrapper img:hover {
+      transform: scale(1.06) rotateY(6deg) rotateX(3deg);
     }
 
-    @keyframes flotarTilt {
-      0% { transform: translateY(0px) rotateX(0deg) rotateY(0deg); }
-      25% { transform: translateY(-6px) rotateX(2deg) rotateY(-3deg); }
-      50% { transform: translateY(0px) rotateX(0deg) rotateY(0deg); }
-      75% { transform: translateY(-6px) rotateX(-2deg) rotateY(3deg); }
-      100% { transform: translateY(0px) rotateX(0deg) rotateY(0deg); }
-    }
-    @keyframes respirarLibro {
-      0%, 100% { transform: rotateY(0deg) scale(1); }
-      50% { transform: rotateY(0deg) scale(1.02); }
+    @keyframes flotarRespirarTilt {
+      0% {
+        transform: translateY(0px) rotateX(0deg) rotateY(0deg) scale(1);
+      }
+      25% {
+        transform: translateY(-6px) rotateX(2deg) rotateY(-2deg) scale(1.015);
+      }
+      50% {
+        transform: translateY(0px) rotateX(0deg) rotateY(0deg) scale(1);
+      }
+      75% {
+        transform: translateY(-6px) rotateX(-2deg) rotateY(2deg) scale(1.015);
+      }
+      100% {
+        transform: translateY(0px) rotateX(0deg) rotateY(0deg) scale(1);
+      }
     }
 
     .footer {
@@ -305,19 +292,11 @@ function revelarTodo() {
       const wrapper = document.createElement("div");
       wrapper.className = "portada-wrapper";
 
-      const libro = document.createElement("div");
-      libro.className = "libro";
+      const img = document.createElement("img");
+      img.src = libroActual.portada;
+      img.alt = "Portada del libro";
 
-      const cara = document.createElement("div");
-      cara.className = "cara";
-      cara.style.backgroundImage = `url(${libroActual.portada})`;
-
-      const lomo = document.createElement("div");
-      lomo.className = "lomo";
-
-      libro.appendChild(cara);
-      libro.appendChild(lomo);
-      wrapper.appendChild(libro);
+      wrapper.appendChild(img);
       block.appendChild(wrapper);
     } else {
       if (text) text.classList.remove("hidden");
