--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
       background: linear-gradient(135deg, #0d0e1a, #1a1c2d);
       overflow: hidden;
       transition: background 1s ease;
-      perspective: 1200px;
+      perspective: 1000px;
     }
     body.dark { background: #000; }
     .main { height: 100dvh; display: flex; flex-direction: column; opacity: 0; animation: fadeIn 1.5s ease forwards; }
@@ -73,14 +73,14 @@
     }
     @keyframes aparecer { from { opacity: 0; transform: scale(0.95); } to { opacity: 1; transform: scale(1); } }
 
-    /* Portada perfecta */
+    /* Portada 3D + Highlight Effect */
     .portada-wrapper {
       width: 100%;
       height: 100%;
       display: flex;
       justify-content: center;
       align-items: center;
-      animation: flotarRespirarTilt 8s ease-in-out infinite;
+      animation: flotarTiltHighlight 8s ease-in-out infinite;
       transform-style: preserve-3d;
       background: transparent;
     }
@@ -90,29 +90,20 @@
       object-fit: cover;
       aspect-ratio: 2/3;
       border-radius: 22px;
-      box-shadow: 0 12px 30px rgba(0, 0, 0, 0.4);
-      transition: transform 0.6s ease;
+      box-shadow: 0 20px 40px rgba(0,0,0,0.5);
+      transition: transform 0.5s ease, box-shadow 0.5s ease;
     }
     .portada-wrapper img:hover {
-      transform: scale(1.06) rotateY(6deg) rotateX(3deg);
+      transform: scale(1.08) rotateY(6deg) rotateX(3deg);
+      box-shadow: 0 30px 60px rgba(255, 255, 255, 0.2);
     }
 
-    @keyframes flotarRespirarTilt {
-      0% {
-        transform: translateY(0px) rotateX(0deg) rotateY(0deg) scale(1);
-      }
-      25% {
-        transform: translateY(-6px) rotateX(2deg) rotateY(-2deg) scale(1.015);
-      }
-      50% {
-        transform: translateY(0px) rotateX(0deg) rotateY(0deg) scale(1);
-      }
-      75% {
-        transform: translateY(-6px) rotateX(-2deg) rotateY(2deg) scale(1.015);
-      }
-      100% {
-        transform: translateY(0px) rotateX(0deg) rotateY(0deg) scale(1);
-      }
+    @keyframes flotarTiltHighlight {
+      0% { transform: translateY(0) rotateX(0deg) rotateY(0deg) scale(1); }
+      25% { transform: translateY(-6px) rotateX(3deg) rotateY(-2deg) scale(1.015); }
+      50% { transform: translateY(0) rotateX(0deg) rotateY(0deg) scale(1); }
+      75% { transform: translateY(-6px) rotateX(-3deg) rotateY(2deg) scale(1.015); }
+      100% { transform: translateY(0) rotateX(0deg) rotateY(0deg) scale(1); }
     }
 
     .footer {
