--- a/public/index.html
+++ b/public/index.html
@@ -14,11 +14,20 @@
       background: linear-gradient(135deg, #0d0e1a, #1a1c2d);
       overflow: hidden;
       transition: background 1s ease;
-      perspective: 1000px;
+      perspective: 1200px;
     }
     body.dark { background: #000; }
-    .main { height: 100dvh; display: flex; flex-direction: column; opacity: 0; animation: fadeIn 1.5s ease forwards; }
-    @keyframes fadeIn { from { opacity: 0; transform: translateY(20px); } to { opacity: 1; transform: translateY(0); } }
+    .main {
+      height: 100dvh;
+      display: flex;
+      flex-direction: column;
+      opacity: 0;
+      animation: fadeIn 1.5s ease forwards;
+    }
+    @keyframes fadeIn {
+      from { opacity: 0; transform: translateY(20px); }
+      to { opacity: 1; transform: translateY(0); }
+    }
     .grid {
       flex: 1;
       display: grid;
@@ -50,7 +59,9 @@
       position: relative;
       padding: 10px;
     }
-    @keyframes scaleFadeIn { to { transform: scale(1); opacity: 1; } }
+    @keyframes scaleFadeIn {
+      to { transform: scale(1); opacity: 1; }
+    }
     .block-content {
       position: absolute;
       inset: 0;
@@ -71,18 +82,21 @@
       animation: aparecer 0.6s forwards;
       box-shadow: 0 8px 30px rgba(0, 0, 0, 0.3);
     }
-    @keyframes aparecer { from { opacity: 0; transform: scale(0.95); } to { opacity: 1; transform: scale(1); } }
-
-    /* Portada 3D + Highlight Effect */
+    @keyframes aparecer {
+      from { opacity: 0; transform: scale(0.95); }
+      to { opacity: 1; transform: scale(1); }
+    }
+    /* Animaciones Flotar + Tilt + Destello */
     .portada-wrapper {
       width: 100%;
       height: 100%;
       display: flex;
       justify-content: center;
       align-items: center;
-      animation: flotarTiltHighlight 8s ease-in-out infinite;
       transform-style: preserve-3d;
-      background: transparent;
+      animation: flotarTiltDestello 8s ease-in-out infinite;
+      background: linear-gradient(135deg, rgba(255,255,255,0.02) 0%, rgba(0,0,0,0.02) 100%);
+      border-radius: 20px;
     }
     .portada-wrapper img {
       width: 88%;
@@ -90,22 +104,35 @@
       object-fit: cover;
       aspect-ratio: 2/3;
       border-radius: 22px;
-      box-shadow: 0 20px 40px rgba(0,0,0,0.5);
-      transition: transform 0.5s ease, box-shadow 0.5s ease;
+      box-shadow: 0 12px 40px rgba(0,0,0,0.5);
+      transition: transform 0.6s ease, box-shadow 0.6s ease;
     }
     .portada-wrapper img:hover {
-      transform: scale(1.08) rotateY(6deg) rotateX(3deg);
-      box-shadow: 0 30px 60px rgba(255, 255, 255, 0.2);
+      transform: scale(1.06) rotateY(5deg) rotateX(3deg);
+      box-shadow: 0 20px 50px rgba(255,255,255,0.2);
     }
-
-    @keyframes flotarTiltHighlight {
-      0% { transform: translateY(0) rotateX(0deg) rotateY(0deg) scale(1); }
-      25% { transform: translateY(-6px) rotateX(3deg) rotateY(-2deg) scale(1.015); }
-      50% { transform: translateY(0) rotateX(0deg) rotateY(0deg) scale(1); }
-      75% { transform: translateY(-6px) rotateX(-3deg) rotateY(2deg) scale(1.015); }
-      100% { transform: translateY(0) rotateX(0deg) rotateY(0deg) scale(1); }
+    @keyframes flotarTiltDestello {
+      0% {
+        transform: translateY(0px) rotateX(0deg) rotateY(0deg);
+        background-position: 0% 0%;
+      }
+      25% {
+        transform: translateY(-8px) rotateX(3deg) rotateY(-3deg);
+        background-position: 25% 25%;
+      }
+      50% {
+        transform: translateY(0px) rotateX(0deg) rotateY(0deg);
+        background-position: 50% 50%;
+      }
+      75% {
+        transform: translateY(-8px) rotateX(-3deg) rotateY(3deg);
+        background-position: 75% 75%;
+      }
+      100% {
+        transform: translateY(0px) rotateX(0deg) rotateY(0deg);
+        background-position: 100% 100%;
+      }
     }
-
     .footer {
       display: flex;
       flex-direction: column;
@@ -151,7 +178,6 @@
     .bg4 { background: linear-gradient(135deg, #fc466b, #3f5efb); }
   </style>
 </head>
-
 <body>
 <div class="main">
   <div class="grid" id="gridContainer"></div>
